<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ak">fb7YwlKY3ntx8hBDGMGLqX2FhlPkDMvv</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_author">"枣庄职业学院专用校园跑版本仅供测试
  禁止倒卖外传出任何事情与作者无关"</string>
    <string name="app_email">Author: zcsexp@gmail.com</string>
    <string name="app_history">历史记录</string>
    <string name="app_name">枣职校园跑神器</string>
    <string name="app_service_tips">影梭服务正在运行中</string>
    <string name="app_settings">设置</string>
    <string name="app_statement">仅供学习使用，否则后果自负！</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="baidumap">百度地图穿越版</string>
    <string name="baidumap_hint">中国地图详细版本,强大功能,选择你想要的王者社区</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_left_location_hint">点击左下角可模拟位置</string>
    <string name="click_map_hint">请先点击地图位置或者搜索位置</string>
    <string name="close_wifi_hint">开启 WIFI 后（即使没有连接热点）将导致定位闪回真实位置。建议关闭 WIFI，使用移动流量进行游戏！</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete">跳过</string>
    <string name="confirm">确定</string>
    <string name="copy">Copy</string>
    <string name="copy_shear_plate">已复制到剪切板</string>
    <string name="current_value">\"当前值: \"</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="default_info_title">Default Location</string>
    <string name="del_succ">删除成功!</string>
    <string name="delete_hint">确定要删除该项搜索记录吗?</string>
    <string name="delete_record_error">删除记录出错</string>
    <string name="delete_record_hint">确定要删除全部历史记录吗?</string>
    <string name="developer_hint">无法跳转到开发者选项,请先确保您的设备已处于开发者模式</string>
    <string name="enter_latitude_longitude">请输入经纬度</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="go_close">去关闭</string>
    <string name="goog_map_hint">你可以穿越全世界任何一个地方</string>
    <string name="google_map">谷歌地图世界版本</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint">提示</string>
    <string name="history_idle">暂无历史记录</string>
    <string name="home_exit_hint">再按一次退出应用</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_invalid">输入无效</string>
    <string name="input_location_limit">"经纬度超出限制!
-180.0&lt;经度&lt;180.0
-90.0&lt;纬度&lt;90.0"</string>
    <string name="input_null">输入不能为空</string>
    <string name="input_position_baidu">BD09 坐标系</string>
    <string name="input_position_cancel">取消</string>
    <string name="input_position_gps">GPS 坐标系</string>
    <string name="input_position_ok">传送</string>
    <string name="item_view_role_description">Tab</string>
    <string name="joystick_history_tips">搜索或点击历史位置</string>
    <string name="joystick_map_tips">搜索或点击地图位置</string>
    <string name="label">Label</string>
    <string name="label_latitude">请输入纬度</string>
    <string name="label_longitude">请输入经度</string>
    <string name="locatiion_stop">模拟位置已终止</string>
    <string name="location_error">定位失败,请手动选取定位点</string>
    <string name="location_hint">合同声明</string>
    <string name="location_hint_content">同意即代表愿意遵守上述规定，如果违规，即愿意承担法律责任。</string>
    <string name="location_setting_hint">为支持应用获取定位信息和模拟定位信息,建议在设置中开启定位权限</string>
    <string name="location_start">模拟位置已启动</string>
    <string name="location_start_hint">请先点击地图位置或者搜索位置</string>
    <string name="location_title">已模拟该位置</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="map_pic_normal">普通图</string>
    <string name="map_pic_sate">卫星图</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="messages_header">Messages</string>
    <string name="welcome_protocol_agree">同意并继续</string>
    <string name="welcome_protocol_check">不再显示</string>
    <string name="welcome_protocol_disagree">不同意</string>
    <string name="welcome_protocol_title">免责声明</string>
</resources>