<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_5dp_while" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="36.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/enter_latitude_longitude" />
        <com.mm.app.loaction.application.widget.CustomEditText android:textSize="14.0dip" android:textColor="@color/black" android:id="@id/etJoystickLongitude" android:background="@drawable/tanwan_shape_all_round_maincolor_null" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="8.0dip" android:hint="@string/label_longitude" android:inputType="numberDecimal" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" android:autofillHints="longitude" />
        <com.mm.app.loaction.application.widget.CustomEditText android:textSize="14.0dip" android:textColor="@color/black" android:id="@id/etJoystickLatitude" android:background="@drawable/tanwan_shape_all_round_maincolor_null" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="16.0dip" android:hint="@string/label_latitude" android:inputType="numberDecimal" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" android:autofillHints="latitude" />
        <RadioGroup android:orientation="horizontal" android:id="@id/RadioGroupMapType" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip">
            <RadioButton android:textSize="14.0dip" android:textColor="@color/black" android:id="@id/rbPosTypeBd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/input_position_baidu" android:layout_weight="1.0" />
            <RadioButton android:textSize="14.0dip" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/input_position_gps" android:layout_weight="1.0" />
        </RadioGroup>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip">
            <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center" android:id="@id/inputPositionCancel" android:background="@drawable/shape_5dp_gray" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/input_position_cancel" />
            <Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <TextView android:textSize="14.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/inputPositionOk" android:background="@drawable/shape_5dp_darkcyan" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/input_position_ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>