<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_5dp_while" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff282828" android:layout_gravity="center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_protocol_title" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="400.0dip" android:layout_marginBottom="10.0dip">
            <TextView android:textSize="12.0dip" android:textColor="#ff282828" android:id="@id/tv_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:lineSpacingMultiplier="1.2" />
        </ScrollView>
        <CheckBox android:textSize="12.0dip" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="12.0dip" android:button="@drawable/btn_selector" android:text="@string/welcome_protocol_check" android:drawablePadding="4.0dip" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
            <TextView android:textSize="12.0dip" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_cancel" android:background="@drawable/shape_5dp_gray" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/welcome_protocol_disagree" />
            <Space android:layout_width="60.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="12.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_agree" android:background="@drawable/shape_5dp_darkcyan" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/welcome_protocol_agree" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>