<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_map" android:fitsSystemWindows="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cyBaiduMap" android:background="@drawable/shape_all_round_gray_null" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="100.0dip" android:layout_marginRight="20.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/ivBaiduMap" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/baidu" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="left" android:id="@id/tv1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/baidumap" android:layout_marginStart="12.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/ivBaiduMap" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tv2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/baidumap_hint" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/tv1" app:layout_constraintTop_toBottomOf="@id/tv1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cyGoogleMap" android:background="@drawable/shape_all_round_gray_null" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cyBaiduMap">
        <ImageView android:id="@id/ivGoogleMap" android:layout_width="80.0dip" android:layout_height="80.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/tvGoogle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/google_map" android:layout_marginStart="12.0dip" app:layout_constraintStart_toEndOf="@id/ivGoogleMap" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/tvgoogle1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/goog_map_hint" app:layout_constraintStart_toStartOf="@id/tvGoogle" app:layout_constraintTop_toBottomOf="@id/tvGoogle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>