<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/relativeLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.baidu.mapapi.map.MapView android:id="@id/bdMapView" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <RadioGroup android:orientation="vertical" android:id="@id/RadioGroupMapType" android:layout_width="90.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_alignParentTop="true" android:layout_marginEnd="5.0dip" android:layout_alignParentEnd="true">
            <RadioButton android:id="@id/mapNormal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:minHeight="48.0dip" android:text="@string/map_pic_normal" android:layout_weight="1.0" />
            <RadioButton android:id="@id/mapSatellite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/map_pic_sate" android:layout_weight="1.0" />
        </RadioGroup>
        <ImageButton android:theme="@style/AppTheme" android:id="@id/ibZoomIn" android:background="?android:selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="383.0dip" android:contentDescription="@null" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_zoom_in" app:tint="@color/colorAccent" />
        <ImageButton android:theme="@style/AppTheme" android:id="@id/ibtnZoomOut" android:background="?android:selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="416.0dip" android:contentDescription="@null" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_zoom_out" app:tint="@color/colorAccent" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="start|bottom|center" android:id="@id/fabInputPos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@null" app:elevation="6.0dip" app:pressedTranslationZ="12.0dip" app:rippleColor="#ffa9a9a9" app:srcCompat="@drawable/ic_input" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="start|bottom|center" android:id="@id/faBtnStart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:contentDescription="@null" app:elevation="6.0dip" app:pressedTranslationZ="12.0dip" app:rippleColor="#ffa9a9a9" app:srcCompat="@drawable/ic_position" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="start|bottom|center" android:id="@id/faCurPosition" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:contentDescription="@null" android:layout_alignParentEnd="true" app:pressedTranslationZ="12.0dip" app:srcCompat="@drawable/ic_home_position" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>